Add functional pictures and search properties; update variable scope.

--- a/Cartopia.html
+++ b/Cartopia.html
@@ -7,14 +7,24 @@
 <body>
     <h1>Your Car Dealership</h1>
     <form action="index.php">
-            <div class="form-group">
-                <label for="price">Preferred Price</label>
-                <input id="price" name="price" class="form-control" type="number">
-            </div>
-            <button type="submit" class="btn">Go!</button>
-        </form>
+        <div class="form-group">
+            <label for="make_model">Preferred year</label>
+            <input id="make_model" name="make_model" class="form-control" type="number">
+        </div><div class="form-group">
+            <label for="price">Preferred Price</label>
+            <input id="price" name="price" class="form-control" type="number">
+        </div><div class="form-group">
+            <label for="distance">Preferred mileage</label>
+            <input id="distance" name="distance" class="form-control" type="number">
+        </div>
+        <div class="form-group">
+            <label for="status">Preferred condition</label>
+            <input id="status" name="status" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Go!</button>
+    </form>
     <ul>
-      
+
     </ul>
-</body>
+  </body>
 </html>
